# naxel

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_ja.md  SPECIFICATIONS.md  SPECIFICATIONS_ja.md  json2text.sh  settings.ini  tauri.conf.json
capabilities/: default.json
frontend/: index.html
samples/repo/: additional_properties.json  reference_collections.json  repository.ini
samples/repo/contacts/: MRSXMLLUMVQW2.0000.txt  N5YHGLLUMVQW2.0000.txt
samples/repo/schedules/: MJ2XG2LOMVZXGLLIN52XE4Y.0000.txt  N5XC2Y3BNRWA.0000.txt
src/: app.py  gui.py
src-rs/: commands.rs  config.rs  encoding.rs  formats.rs  main.rs  repo.rs  table_main.rs  table_spec.rs  validation.rs
src-rs/gui/: mod.rs  query.rs  table.rs
tests/: conftest.py  test_commands.py  test_encoding.py  test_validation.py
