[package]
name = "naxel"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "naxel"
path = "src-rs/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
flate2 = "1"
configparser = "3"
data-encoding = "2"
regex = "1"
csv = "1"
md5 = "0.7"
rustyline = "14"
anyhow = "1"
